[gd_scene load_steps=3 format=3 uid="uid://b8mhxihebh2lu"]

[ext_resource type="Script" uid="uid://b6ghwu7ntvyug" path="res://scripts/DiceDraft/DiceDraft.gd" id="1_0y0e0"]
[ext_resource type="PackedScene" uid="uid://dbtd6w07pf5p5" path="res://scenes/DiceGridScene.tscn" id="1_msi6q"]

[node name="DiceDraft" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0y0e0")

[node name="DraftLabel" type="RichTextLabel" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.055555556
anchor_top = 0.69135803
anchor_right = 0.33333334
anchor_bottom = 0.79012346
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 42
text = "Draft your Dice"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DiceGrid" parent="." instance=ExtResource("1_msi6q")]
layout_mode = 1
gridType = 6

[node name="TextControl" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.3888889
anchor_top = 0.69135803
anchor_right = 0.7222222
anchor_bottom = 0.79012346
metadata/_edit_use_anchors_ = true

[node name="ScoreDiceChoiceLabel" type="RichTextLabel" parent="TextControl"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
text = "Score Dice Choices Left:"
metadata/_edit_use_anchors_ = true

[node name="ScoreDiceChoiceValue" type="RichTextLabel" parent="TextControl"]
layout_mode = 0
anchor_left = 0.5416667
anchor_right = 0.8333333
anchor_bottom = 0.5
text = "Default"
metadata/_edit_use_anchors_ = true

[node name="RewardDiceChoiceLabel" type="RichTextLabel" parent="TextControl"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5208333
anchor_bottom = 1.0
text = "Reward Dice Choices Left:"
metadata/_edit_use_anchors_ = true

[node name="RewardDiceChoiceValue" type="RichTextLabel" parent="TextControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5416667
anchor_top = 0.5
anchor_right = 0.8333333
anchor_bottom = 1.0
text = "Default"
metadata/_edit_use_anchors_ = true
